Nurses Last Changes 090921

--- a/src/app/clinics-dashboard/clinics-dashboard.component.html
+++ b/src/app/clinics-dashboard/clinics-dashboard.component.html
@@ -266,6 +266,17 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="row">
+                        <div class="col">
+                            <h3>מנהלת היחידה: </h3>
+                        </div>
+                        <div class="col">
+                            <h2><b>{{
+                                    detailsFormGroup2.InchargeDoctor
+                                    }}</b></h2>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </form>
         </div>
