--- a/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
+++ b/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
@@ -1,23 +1,39 @@
-<div dir="rtl" class="row">
-    <div class="col">
-        <google-chart #chart
-        [title]="Linetitle"
-        [type]="Linetype"
-        [data]="Linedata"
-        [options]="Lineoptions"
-        [width]="Linewidth"
-        [height]="Lineheight">
-     </google-chart>        
+<div dir="rtl">
+    <div class="row">
+        <div class="col">
+            <google-chart #chart
+            [title]="Linetitle"
+            [type]="Linetype"
+            [data]="Linedata"
+            [options]="Lineoptions"
+            [width]="Linewidth"
+            [height]="Lineheight">
+         </google-chart>        
+        </div>
+        <div class="col">
+            <google-chart #chart
+            [title]="Pietitle"
+            [type]="Pietype"
+            [data]="Piedata"
+            [options]="Pieoptions"
+            [width]="Piewidth"
+            [height]="Pieheight">
+         </google-chart>        
+        </div>
     </div>
-    <div class="col">
-        <google-chart #chart
-        [title]="Pietitle"
-        [type]="Pietype"
-        [data]="Piedata"
-        [options]="Pieoptions"
-        [width]="Piewidth"
-        [height]="Pieheight">
-     </google-chart>        
+    <hr class="devideLine">
+    <div class="row">
+        <div class="col">
+            <google-chart #chart
+            [title]="Bartitle"
+            [type]="Bartype"
+            [data]="Bardata"
+            [options]="Baroptions"
+            [width]="Barwidth"
+            [height]="Barheight">
+         </google-chart>        
+        </div>
     </div>
+    
 </div>
 
