--- a/src/app/nurses-dashboard/changesHistory.html
+++ b/src/app/nurses-dashboard/changesHistory.html
@@ -8,7 +8,7 @@
   <button mat-button (click)="closeDialog()">Close</button>
 </div> -->
 
-<h1 mat-dialog-title style="text-align: center;">היסטוריית שינויים</h1>
+<!-- <h1 mat-dialog-title style="text-align: center;">היסטוריית שינויים</h1>
 <table dir="rtl" mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
 
   <ng-container matColumnDef="Row_ID">
@@ -28,4 +28,4 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+</table> -->
