--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -22,8 +22,7 @@
             <th mat-header-cell *matHeaderCellDef> לפני לידה </th>
             <td mat-cell *matCellDef="let element">
                 <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>מספר מטופלים</mat-label>
-                    <input matInput type="number" formControlName="beforeDelivery">
+                    <input matInput type="number" formControlName="beforeDelivery" style="text-align: center;">
                 </mat-form-field>
             </td>
         </ng-container>
@@ -31,8 +30,7 @@
             <th mat-header-cell *matHeaderCellDef> לפני ניתוח </th>
             <td mat-cell *matCellDef="let element">
                 <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>מספר מטופלים</mat-label>
-                    <input matInput type="number" formControlName="beforeSurgery">
+                    <input matInput type="number" formControlName="beforeSurgery" style="text-align: center;">
                 </mat-form-field>
             </td>
         </ng-container>
@@ -51,21 +49,40 @@
         </div>
     </div> -->
     <hr>
-    <h4>רשימת מטופלים במחלקה <b>
+    <h4>רשימת מטופלות במחלקה <b>
         </b></h4>
-    <mat-form-field class="float-right text-right" appearance="standard">
-        <mat-label>מסנן</mat-label>
-        <input matInput (keyup)="applyFilter($event)" #input>
-    </mat-form-field>
+
+    <div dir="rtl">
+        <mat-form-field class="float-right text-right" appearance="standard">
+            <mat-label>מסנן</mat-label>
+            <input matInput (keyup)="applyFilter($event,'')" #input>
+        </mat-form-field>
+    </div>
+    <div dir="rtl" class="mb-3 text-center">
+        <mat-list role="list" id="list_of_types">
+            <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'')"
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
+                    הכל
+                </button></mat-list-item>
+            <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'ACTIVE')"
+                    mat-raised-button style="background-color: aquamarine;">
+                    מטופלות כעת
+                </button></mat-list-item>
+            <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'NOT')"
+                    mat-raised-button style="background-color: grey;">
+                    השתחררו
+                </button></mat-list-item>
+        </mat-list>
+    </div>
     <table dir="rtl" mat-table [dataSource]="dataSource3_2" class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="casenumber">
-            <th mat-header-cell *matHeaderCellDef> מס' מקרה </th>
-            <td mat-cell *matCellDef="let element"> {{element.H_CASE_NUMBER}} </td>
+            <th mat-header-cell *matHeaderCellDef> מס' מקרה (אמא) </th>
+            <td mat-cell *matCellDef="let element"> {{element.H_CASE_NUMBER_MOTHER}} </td>
         </ng-container>
 
         <ng-container matColumnDef="firstname">
-            <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
+            <th mat-header-cell *matHeaderCellDef> שם פרטי (אמא) </th>
             <td mat-cell *matCellDef="let element"> {{element.H_PATIENT_FIRST_NAME}} </td>
         </ng-container>
 
@@ -80,12 +97,12 @@
         </ng-container>
 
         <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> תאריך לידה </th>
+            <th mat-header-cell *matHeaderCellDef> תאריך לידה (תינוק) </th>
             <td mat-cell *matCellDef="let element"> {{element.H_DOB}} </td>
         </ng-container>
 
         <ng-container matColumnDef="time">
-            <th mat-header-cell *matHeaderCellDef> שעת לידה </th>
+            <th mat-header-cell *matHeaderCellDef> שעת לידה (תינוק) </th>
             <td mat-cell *matCellDef="let element"> {{element.H_DOB_TIME}} </td>
         </ng-container>
 
@@ -95,7 +112,8 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay1_2"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay1_2;"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay1_2;"
+            [style.background]="row.Active == 'ACTIVE' ? 'aquamarine': 'darkgray'"></tr>
 
     </table>
 </form>
@@ -127,10 +145,13 @@
     <hr>
     <h4>רשימת מטופלים בחדר ניתוח <b>
         </b></h4>
-    <mat-form-field class="float-right text-right" appearance="standard">
-        <mat-label>מסנן</mat-label>
-        <input matInput (keyup)="applyFilter2($event)" #input>
-    </mat-form-field>
+    <div dir="rtl">
+        <mat-form-field class="float-right text-right" appearance="standard">
+            <mat-label>מסנן</mat-label>
+            <input matInput (keyup)="applyFilter2($event)" #input>
+        </mat-form-field>
+    </div>
+
     <table dir="rtl" mat-table [dataSource]="dataSource4_2" class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="patientid">
@@ -148,11 +169,6 @@
             <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> תאריך ניתוח </th>
-            <td mat-cell *matCellDef="let element"> {{element.SurgeryDate}} </td>
-        </ng-container>
-
         <ng-container matColumnDef="room">
             <th mat-header-cell *matHeaderCellDef> חדר ניתוח </th>
             <td mat-cell *matCellDef="let element"> {{element.SurgeryRoom}} </td>
@@ -161,6 +177,21 @@
         <ng-container matColumnDef="surgeryname">
             <th mat-header-cell *matHeaderCellDef> שם ניתוח </th>
             <td mat-cell *matCellDef="let element"> {{element.SurgeryName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> תאריך ניתוח </th>
+            <td mat-cell *matCellDef="let element"> {{element.SurgeryDate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="starttime">
+            <th mat-header-cell *matHeaderCellDef> שעת תחילה </th>
+            <td mat-cell *matCellDef="let element"> {{element.SurgeryTime}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="endtime">
+            <th mat-header-cell *matHeaderCellDef> שעת סיום </th>
+            <td mat-cell *matCellDef="let element"> {{element.SurgeryEndTime}} </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
@@ -182,12 +213,13 @@
 
         <ng-container matColumnDef="adult">
             <th mat-header-cell *matHeaderCellDef> מבוגרים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('ADULTS','0',$event)"
-                    matTooltip="מטופלים במצטבר" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);">
+            <td mat-cell *matCellDef="let element"><button type="button"
+                    (click)="getOtherDepartmentPatients('ADULTS','0',$event)" matTooltip="מטופלים במצטבר"
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.ADULTS}}
                 </button>
-                <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('ADULTS','1',$event)"  matTooltip="מטופלים כעת" [disabled]
+                <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('ADULTS','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.ADULTSNOW}}
                 </button>
@@ -199,19 +231,21 @@
                     (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
                     style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
                     {{element.CHILDREN}}
-                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('CHILDREN','1',$event)"  matTooltip="מטופלים כעת"
-                    [disabled] mat-raised-button>
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
                     {{element.CHILDRENNOW}}
                 </button></td>
         </ng-container>
         <ng-container matColumnDef="women">
             <th mat-header-cell *matHeaderCellDef> נשים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('WOMEN','0',$event)"
-                    mat-raised-button matTooltip="מטופלים במצטבר"
-                    style="background-image: linear-gradient(grey, aquamarine);">
+            <td mat-cell *matCellDef="let element"><button type="button"
+                    (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
+                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.WOMEN}}
-                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('WOMEN','1',$event)"  matTooltip="מטופלים כעת"
-                    [disabled] mat-raised-button>
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
                     {{element.WOMENNOW}}
                 </button></td>
         </ng-container>
@@ -221,8 +255,9 @@
                     (click)="getOtherDepartmentPatients('SHOKHVVEM','0',$event)" mat-raised-button
                     style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.SHOKHVVEM}}
-                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('SHOKHVVEM','1',$event)"  matTooltip="מטופלים כעת"
-                    [disabled] mat-raised-button>
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('SHOKHVVEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
                     {{element.SHOKHVVEMNOW}}
                 </button></td>
         </ng-container>
@@ -232,19 +267,21 @@
                     (click)="getOtherDepartmentPatients('MEHALKHEM','0',$event)" mat-raised-button
                     style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.MEHALKHEM}}
-                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('MEHALKHEM','1',$event)"  matTooltip="מטופלים כעת"
-                    [disabled] mat-raised-button>
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('MEHALKHEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
                     {{element.MEHALKHEMNOW}}
                 </button></td>
         </ng-container>
         <ng-container matColumnDef="shockroom">
             <th mat-header-cell *matHeaderCellDef> חדר הלם </th>
-            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('HELEM','0',$event)"
-                    matTooltip="מטופלים במצטבר" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);">
+            <td mat-cell *matCellDef="let element"><button type="button"
+                    (click)="getOtherDepartmentPatients('HELEM','0',$event)" matTooltip="מטופלים במצטבר"
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.HELEM}}
-                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('HELEM','1',$event)" matTooltip="מטופלים כעת"
-                    [disabled] mat-raised-button>
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('HELEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
                     {{element.HELEMNOW}}
                 </button></td>
         </ng-container>
