--- a/src/app/nurses-dashboard/share-reports-dialog.html
+++ b/src/app/nurses-dashboard/share-reports-dialog.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-1">
             <button mat-raised-button class="btn btn-primary btn-raised float-left"
-                (click)="shareComplaintWithOthers()" matTooltip="שליחה">
+                (click)="shareReportWithOthers()" matTooltip="שליחה">
                 <span class="material-icons">
                     reply
                 </span>
