--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
@@ -33,6 +33,10 @@ h4{
     padding-left: 15px;
   }
 
+  #list_of_types{
+    display: inline-flex;
+  }
+
   /* th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
     padding: 0;
     border-bottom-width: 1px;
