--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -266,7 +266,9 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-
+            <li class="nav-item" *ngIf="_EmSurgiries">
+                <a class="nav-link" routerLink="urgentsurgeries">ניתוחים דחופים</a>
+            </li>
             <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
